--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "cross-env vite build && cross-env esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "cross-env NODE_ENV=production node dist/index.js",
     "check": "tsc",
-    "db:push": "cross-env drizzle-kit push"
+    "db:push": "cross-env drizzle-kit push",
+    "seed:plans": "tsx server/seedEcoAdmin.ts"
   },
   "dependencies": {
     "@google-cloud/storage": "^7.17.2",
