--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@uppy/dashboard": "^5.0.3",
     "@uppy/react": "^5.1.0",
     "@uppy/webcam": "^5.0.2",
+    "@uppy/xhr-upload": "^5.0.2",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
