--- a/deployment/web.config
+++ b/deployment/web.config
@@ -58,9 +58,13 @@
           <action type="Rewrite" url="dist/index.js"/>
         </rule>
         
-        <!-- WebSocket support -->
+        <!-- WebSocket support - must come before other rules -->
         <rule name="WebSocket" stopProcessing="true">
           <match url="^ws(.*)" />
+          <serverVariables>
+            <set name="HTTP_UPGRADE" value="{HTTP_UPGRADE}" />
+            <set name="HTTP_CONNECTION" value="{HTTP_CONNECTION}" />
+          </serverVariables>
           <action type="Rewrite" url="dist/index.js"/>
         </rule>
         
