--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "connect-pg-simple": "^10.0.0",
+    "cookie-signature": "^1.2.2",
     "cross-env": "^10.1.0",
     "date-fns": "^3.6.0",
     "dotenv": "^17.2.3",
