--- a/mobile/package.json
+++ b/mobile/package.json
@@ -15,17 +15,17 @@
     "@react-navigation/stack": "^7.6.14",
     "@tanstack/react-query": "^5.90.16",
     "date-fns": "^4.1.0",
-    "expo": "~54.0.31",
+    "expo": "~54.0.32",
     "expo-camera": "^17.0.10",
     "expo-clipboard": "^8.0.8",
     "expo-document-picker": "^14.0.8",
     "expo-file-system": "^19.0.21",
     "expo-image-picker": "^17.0.10",
     "expo-network": "^8.0.8",
-    "expo-router": "^6.0.21",
+    "expo-router": "~6.0.22",
     "expo-secure-store": "^15.0.8",
     "expo-sharing": "^14.0.8",
-    "expo-sqlite": "~15.0.0",
+    "expo-sqlite": "~16.0.10",
     "expo-status-bar": "~3.0.9",
     "lucide-react-native": "^0.562.0",
     "react": "19.1.0",
