--- a/mobile/app.json
+++ b/mobile/app.json
@@ -35,6 +35,7 @@
         "ACCESS_NETWORK_STATE",
         "INTERNET"
       ],
+      "usesCleartextTraffic": true,
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false
     },
