--- a/mobile/eas.json
+++ b/mobile/eas.json
@@ -1,6 +1,7 @@
 {
   "cli": {
-    "version": ">= 5.2.0"
+    "version": ">= 5.2.0",
+    "appVersionSource": "remote"
   },
   "build": {
     "development": {
@@ -18,4 +19,3 @@
     "production": {}
   }
 }
-
