--- a/mobile/package.json
+++ b/mobile/package.json
@@ -33,17 +33,20 @@
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-get-random-values": "~1.11.0",
     "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "~4.16.0",
     "react-native-signature-canvas": "^5.0.2",
     "react-native-svg": "15.12.1",
     "react-native-web": "^0.21.2",
-    "react-native-webview": "13.15.0"
+    "react-native-webview": "13.15.0",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@expo/config-plugins": "^54.0.4",
     "@types/react": "~19.1.0",
+    "@types/uuid": "^10.0.0",
     "typescript": "~5.9.2"
   },
   "private": true
